--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#error-page {
+  display: flex;
+  height: 100vh;
+  font-size: x-large;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
